<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rtmp</string>
    <string name="home_category">类型</string>
    <string name="home_language">语言</string>
    <string name="home_country">国家</string>
    <string name="home_other">Other</string>
    <string name="home_category_view">分类浏览</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="total">总计: %d</string>
    <string name="tip_search">CCTV、China、Auto</string>
    <string name="tip_play_error">出现错误,请重试!!!</string>
    <string name="tip_play_retry">重试</string>
    <string name="tip_del_fail">删除失败</string>
    <string name="tip_del_success">删除成功</string>
    <string name="nav_import">导入</string>
    <string name="nav_home">首页</string>
    <string name="nav_name">Cloud</string>
    <string name="m3u">导入m3u文件</string>
    <string name="me_import_file">导入m3u文件后可展示列表</string>
    <string name="me_playlist">我的播放列表</string>
    <string name="tip_parse_file_error">文件解析失败</string>
    <string name="search_share">searchShare</string>
    <string name="delete_forever">delete_forever</string>
    <string name="tip_del_playlist">删除播放列表</string>
    <string name="tip_del_video">删除视频</string>
    <string name="tip_beyond_retrieve">此操作不可恢复!</string>
    <string name="enter">确定</string>
    <string name="cancel">取消</string>
    <string name="mode_night">夜间模式</string>
    <string name="setting_pic_download">自动抓取图片</string>
    <string name="setting_user">用户设置</string>
    <string name="setting_intro">简介</string>
    <string name="bytebyte6">ByteByte6</string>
    <string name="nav_setting">设置</string>
    <string name="tip">提示</string>
    <string name="enter_exit">是否要退出应用!</string>
    <string name="nav_fav">我的收藏</string>
    <string name="nav_download">下载中心</string>
    <string name="tip_add_download_has_been">已添加到下载列表,如需取消请到下载页面!</string>
    <string name="tip_un_support_download_live_stream">不支持下载实时流!</string>
    <string name="pause">暂停下载</string>
    <string name="resume">开始下载</string>
    <string name="tip_please_wait">正在检测该视频是否支持下载,请稍等片刻…</string>
    <string name="tip_working">任务进行中</string>
    <string name="toolbar_navigation">navigation</string>
    <string name="tabLayoutContentDescription">tabLayoutContentDescription</string>
</resources>